fixed some spacing issues with the header

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -19,41 +19,73 @@
 
 .nav-pills {
   color: #f2d6bd;
+  // width: 17rem;
+  // border: solid black 1px;
+  // display: flex;
+  // flex-direction: row;
+  // justify-content: space-around;
 }
 
 .header-link {
-  margin-left: 2rem;
-  margin-top: 0.5rem;
-  &__about {
-    margin-left: 6.5rem;
-    margin-top: 0.5rem;
+  // margin-left: 1rem;
+  // margin-right: 1rem;
+  margin-top: 0.25rem;
+  // &__about {
+  //   margin-left: 1rem;
+  //   margin-top: 0.5rem;
+  // }
+}
+
+.nav-item {
+  // border: solid black 1px;
+  width: 10rem;
+  display: flex;
+  justify-content: center;
+  &__1 {
+    width: 10rem;
+    display: flex;
+    justify-content: center;
   }
 }
 
 .link {
   &__logo {
     font-family: "Monoton", cursive;
+    margin-right: 1.5rem;
+  }
+}
+
+@media only screen and (min-width: 540px) {
+  .nav-item {
+    width: 5rem;
+    display: flex;
+    justify-content: flex-end;
+    &__1 {
+      width: 5rem;
+      display: flex;
+      justify-content: flex-end;
+    }
   }
 }
 
 @media only screen and (min-width: 768px) {
-  .link {
-    &__logo {
-      margin-left: 13rem;
-    }
-  }
-  .header-link {
-    &__about {
-      margin-left: 2rem;
-      margin-top: 0.5rem;
+  .nav-item {
+    // border: solid 1px black;
+    width: 8rem;
+    display: flex;
+    justify-content: flex-end;
+    &__1 {
+      // border: solid 1px black;
+      width: 6rem;
     }
   }
 }
 
 @media only screen and (min-width: 1280px) {
-  .link {
-    &__logo {
-      margin-left: 0;
+  .nav-item {
+    width: 9rem;
+    &__1 {
+      width: 6rem;
     }
   }
 }
